Fix for missing filter button on iphone

--- a/front-gateway/src/components/Search/style/filter.scss
+++ b/front-gateway/src/components/Search/style/filter.scss
@@ -262,11 +262,3 @@
     margin-bottom: 80px;
   }
 }
-
-.fixed-position-iphone-fix {
-    position:fixed;
-    top:-1px;
-    height:1px;
-    width:100%;
-    background:white;
-}
